rust/adapters/zcode/src/snapshots/ccusage_adapter_zcode__report__tests__focused_zcode_daily_json.snap
---
source: adapters/zcode/src/report.rs
expression: "report_from_rows(&daily, AgentReportKind::Daily)"
---
{
  "daily": [
    {
      "cacheCreationTokens": 15,
      "cacheReadTokens": 25,
      "date": "2099-01-02",
      "inputTokens": 60,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 15,
          "cacheReadTokens": 25,
          "cost": 0.00015549999999999999,
          "inputTokens": 60,
          "modelName": "GLM-5.2",
          "outputTokens": 10
        }
      ],
      "modelsUsed": [
        "GLM-5.2"
      ],
      "outputTokens": 10,
      "totalCost": 0.00015549999999999999,
      "totalTokens": 110
    },
    {
      "cacheCreationTokens": 30,
      "cacheReadTokens": 40,
      "date": "2099-01-15",
      "inputTokens": 130,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 30,
          "cacheReadTokens": 40,
          "cost": 0.0003224,
          "inputTokens": 130,
          "modelName": "GLM-5.3",
          "outputTokens": 20
        }
      ],
      "modelsUsed": [
        "GLM-5.3"
      ],
      "outputTokens": 20,
      "totalCost": 0.0003224,
      "totalTokens": 220
    },
    {
      "cacheCreationTokens": 0,
      "cacheReadTokens": 10,
      "date": "2099-02-01",
      "inputTokens": 40,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 0,
          "cacheReadTokens": 10,
          "cost": 0.0000806,
          "inputTokens": 40,
          "modelName": "GLM-5.3",
          "outputTokens": 5
        }
      ],
      "modelsUsed": [
        "GLM-5.3"
      ],
      "outputTokens": 5,
      "totalCost": 0.0000806,
      "totalTokens": 55
    }
  ],
  "totals": {
    "cacheCreationTokens": 45,
    "cacheReadTokens": 75,
    "inputTokens": 230,
    "outputTokens": 35,
    "totalCost": 0.0005585,
    "totalTokens": 385
  }
}
