rust/adapters/zcode/src/snapshots/ccusage_adapter_zcode__report__tests__focused_zcode_daily_table.snap
---
source: adapters/zcode/src/report.rs
expression: "serde_json::to_string_pretty(&table_snapshot(&daily,\nAgentReportKind::Daily)).unwrap()"
---
{
  "headers": [
    "Date",
    "Models",
    "Input",
    "Output",
    "Cache Create",
    "Cache Read",
    "Total Tokens",
    "Cost (USD)"
  ],
  "rows": [
    {
      "cells": [
        "2099-01-02",
        "- GLM-5.2",
        "60",
        "10",
        "15",
        "25",
        "110",
        "$0.00"
      ],
      "kind": "row"
    },
    {
      "cells": [
        "2099-01-15",
        "- GLM-5.3",
        "130",
        "20",
        "30",
        "40",
        "220",
        "$0.00"
      ],
      "kind": "row"
    },
    {
      "cells": [
        "2099-02-01",
        "- GLM-5.3",
        "40",
        "5",
        "0",
        "10",
        "55",
        "$0.00"
      ],
      "kind": "row"
    },
    {
      "cells": [
        "Total",
        "",
        "230",
        "35",
        "45",
        "75",
        "385",
        "$0.00"
      ],
      "kind": "total"
    }
  ],
  "title": "ZCode Token Usage Report"
}
